update room api swagger and response format
