# application/response.go
@@ -8,30 +8,44 @@ import (
 
 // JSONSuccessResponse ...
 type JSONSuccessResponse struct {
-	Code    int         `json:"code" example: "200"`
-	Message string      `json:"message" example: "Success"`
+	Code    uint        `json:"code" example:"200"`
+	Message string      `json:"message" example:"Ok"`
 	Data    interface{} `json:"data"`
 }
 
 // JSONBadResponse ...
 type JSONBadResponse struct {
-	Code    int         `json:"code" example: "40101"`
-	Message string      `json:"message" example: "Only master can access"`
-	Data    interface{} `json:"data"`
+	Code    int    `json:"code" example:"40001"`
+	Message string `json:"message" example:"4xx errors"`
 }
 
 // JSONServerErrResponse ...
 type JSONServerErrResponse struct {
-	Code    int         `json:"code" example: "500"`
-	Message string      `json:"message" example: "Error database"`
-	Data    interface{} `json:"data"`
+	Code    int    `json:"code" example:"500"`
+	Message string `json:"message" example:"Error database"`
 }
 
-func SuccessResponse(c *gin.Context, data interface{}) {
+func Ok(c *gin.Context, data interface{}) {
 	c.JSON(http.StatusOK, JSONSuccessResponse{
 		Code:    http.StatusOK,
-		Message: "Success",
+		Message: "Ok",
 		Data:    data,
+	})
+}
+
+func Created(c *gin.Context, data interface{}) {
+	c.JSON(http.StatusOK, JSONSuccessResponse{
+		Code:    http.StatusCreated,
+		Message: "Created",
+		Data:    data,
+	})
+}
+
+func NoConent(c *gin.Context) {
+	c.JSON(http.StatusOK, JSONSuccessResponse{
+		Code:    http.StatusNoContent,
+		Message: "No Conent",
+		Data:    c.Request.TLS.NegotiatedProtocolIsMutual,
 	})
 }
 
@@ -39,14 +53,12 @@ func FailResponse(c *gin.Context, code int, message string) {
 	if code == http.StatusInternalServerError {
 		c.JSON(code, JSONServerErrResponse{
 			Code:    code,
-			Data:    nil,
 			Message: message,
 		})
 		return
 	}
 	c.JSON(code, JSONBadResponse{
 		Code:    code,
-		Data:    nil,
 		Message: message,
 	})
 }
